worked on animation page

--- a/index.html
+++ b/index.html
@@ -30,30 +30,27 @@
 
   <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="http://www.kristinacentore.com">Kristina Centore</a>
+      <a class="navbar-brand" href="index.html">Kristina Centore</a>
 
-      <!-- COMMENTED OUT
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="http://www.kristinacentore.com">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Links</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Artworks</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Stop Motion</a>
-        </li>
-
-      </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="animation.html">Animation</a>
+            </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link" href="#">Artworks</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Stop Motion</a>
+            </li> -->
+        </ul>
       </div>
-      -->
     </nav>
 
     <main>
