fixed image width issue. fixed image line issue

--- a/animation.html
+++ b/animation.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <style>
+        #img-width-fix {
+            width: 100%;
+        }
+    </style>
+
     <title>Animation</title>
 </head>
 
@@ -57,7 +63,7 @@
                 <div class="col-md-12">
                     <p class="mb-2"><cite>Puppet</cite>, 2016, video</p>
                 </div>
-                <div class="col-md-4 mt-3 mt-md-0">
+                <div class="col-md-4">
                     <img src="assets/images/Kristina_Centore_Puppet_001.jpg" class="img-fluid" alt="Still from Puppet">
                 </div>
                 <div class="col-md-4 mt-3 mt-md-0">
@@ -72,9 +78,8 @@
                 <div class="col-md-12 mt-4">
                     <p class="mb-2"><cite>The Objects are Not Enough</cite>, 2011, video</p>
                 </div>
-                <div class="col-md-4 mt-3 mt-md-0">
-                    <img src="assets/images/Kristina_Centore_Objects_001.jpg" class="img-fluid"
-                        alt="Still from The Objects are Not Enough">
+                <div class="col-md-4">
+                    <img src="assets/images/Kristina_Centore_Objects_001.jpg" class="img-fluid" id="img-width-fix" alt="Still from The Objects are Not Enough">
                 </div>
                 <div class="col-md-4 mt-3 mt-md-0">
                     <img src="assets/images/Kristina_Centore_Objects_002.jpg" class="img-fluid"
@@ -85,7 +90,7 @@
                 <div class="col-md-12 mt-5">
                     <p class="mb-2"><cite>CAAT</cite>, 2011, video</p>
                 </div>
-                <div class="col-md-4 mt-3 mt-md-0">
+                <div class="col-md-4">
                     <img src="assets/images/Kristina_Centore_CAAT_001.jpg" class="img-fluid"
                         alt="Still from CAAT">
                 </div>
@@ -93,7 +98,7 @@
                     <img src="assets/images/Kristina_Centore_CAAT_002.jpg" class="img-fluid"
                         alt="Still from CAAT">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mt-3 mt-md-0">
                     <img src="assets/images/Kristina_Centore_CAAT_003.jpg" class="img-fluid"
                         alt="Still from CAAT">
                 </div>
