--- a/animation.html
+++ b/animation.html
@@ -11,6 +11,19 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <style>
+        .carousel-control-next,
+        .carousel-control-prev {
+            filter: invert(100%);
+        }
+
+        /* .carousel-control-prev-icon {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+        }
+
+        .carousel-control-next-icon {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+        } */
+
         #img-width-fix {
             width: 100%;
         }
@@ -21,6 +34,10 @@
 
         /* screen width from 0 to 400 */
         @media screen and (max-width:400px) {
+
+            img {
+                pointer-events: none;
+            }
 
             h3 {
                 font-size: 1.5rem;
@@ -39,8 +56,21 @@
         /* screen width from 401 to 475 */
         @media screen and (min-width:401px) and (max-width:475px) {
 
+            img {
+                pointer-events: none;
+            }
+
             h3 {
                 font-size: 1.5rem;
+            }
+
+        }
+
+        /* screen width from 476 to 768 */
+        @media screen and (min-width:476px) and (max-width:768px) {
+
+            img {
+                pointer-events: none;
             }
 
         }
@@ -94,10 +124,10 @@
                     <p class="mb-2"><cite>Puppet</cite>, 2016, video</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="assets/images/Kristina_Centore_Puppet_001.jpg" class="img-fluid" alt="Still from Puppet">
+                    <a href="#puppet-one-modal" data-toggle="modal"><img src="assets/images/Kristina_Centore_Puppet_001.jpg" class="img-fluid" alt="Still from Puppet"></a>
                 </div>
                 <div class="col-md-4 mt-3 mt-md-0">
-                    <img src="assets/images/Kristina_Centore_Puppet_002.jpg" class="img-fluid" alt="Still from Puppet">
+                    <a href="#puppet-two-modal" data-toggle="modal"><img src="assets/images/Kristina_Centore_Puppet_002.jpg" class="img-fluid" alt="Still from Puppet"></a>
                 </div>
                 <div class="col-md-4 mt-3 mt-md-0">
                     <img src="assets/images/Kristina_Centore_Puppet_003.png" class="img-fluid border"
@@ -145,7 +175,105 @@
                 </div>
             </div>
         </div>
+
+        <!-- Puppet One Modal -->
+        <div class="modal fade" id="puppet-one-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content rounded-0 border-0">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel"><cite>Puppet</cite>, 2016, video</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body p-0">
+                        <div id="puppetOneIndicators" class="carousel slide" data-ride="carousel"
+                            data-interval="false">
+                            <ol class="carousel-indicators">
+                                <li data-target="#puppetOneIndicators" data-slide-to="0" class="active"></li>
+                                <li data-target="#puppetOneIndicators" data-slide-to="1"></li>
+                                <li data-target="#puppetOneIndicators" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="assets/images/Kristina_Centore_Puppet_001.jpg" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/images/Kristina_Centore_Puppet_002.jpg" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/images/Kristina_Centore_Puppet_003.png" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#puppetOneIndicators" role="button"
+                                data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#puppetOneIndicators" role="button"
+                                data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- Puppet Two Modal -->
+        <div class="modal fade" id="puppet-two-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content rounded-0 border-0">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel"><cite>Puppet</cite>, 2016, video</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body p-0">
+                        <div id="puppetTwoIndicators" class="carousel slide" data-ride="carousel"
+                            data-interval="false">
+                            <ol class="carousel-indicators">
+                                <li data-target="#puppetTwoIndicators" data-slide-to="0" class="active"></li>
+                                <li data-target="#puppetTwoIndicators" data-slide-to="1"></li>
+                                <li data-target="#puppetTwoIndicators" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="assets/images/Kristina_Centore_Puppet_002.jpg" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/images/Kristina_Centore_Puppet_003.png" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="assets/images/Kristina_Centore_Puppet_001.jpg" class="d-block w-100"
+                                        alt="...">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#puppetTwoIndicators" role="button"
+                                data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#puppetTwoIndicators" role="button"
+                                data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <!-- Optional JavaScript -->
