--- a/animation.html
+++ b/animation.html
@@ -169,7 +169,7 @@
                         Heather Hart at the DUMBO Arts Festival in 2012, 2013, and 2015, and Ladyfest Philadelphia in
                         2013.</p>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 mb-3">
                     <img src="assets/images/Kristina_Centore_The_Stop_Motion_Stomp_Station_001.jpg" class="img-fluid"
                         alt="Photo of The Stop Motion Stomp Station">
                 </div>
