--- a/animation.html
+++ b/animation.html
@@ -95,12 +95,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="animation.html">Animation<span class="sr-only">(current)</span></a>
                 </li>
-                <!-- <li class="nav-item">
-                <a class="nav-link" href="#">Artworks</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Stop Motion</a>
-            </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" href="writing.html">Writing</a>
+                </li>
             </ul>
         </div>
     </nav>
