--- a/index.html
+++ b/index.html
@@ -43,12 +43,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="animation.html">Animation</a>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link" href="#">Artworks</a>
-            </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Stop Motion</a>
-            </li> -->
+              <a class="nav-link" href="writing.html">Writing</a>
+          </li>
         </ul>
       </div>
     </nav>
