trying to fix iphone blue border

--- a/writing.html
+++ b/writing.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <style>
+        a {
+            outline: none !important;
+            box-shadow: none !important;
+        }
+
         @media screen and (min-width: 577px) and (max-width: 991px) {
             .modal-xl {
                 width: 90%;
@@ -75,7 +80,7 @@
         <!-- Puppet One Modal -->
         <div class="modal fade" id="lukins-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-xl" role="document">
+            <div class="modal-dialog modal-xl" role="document">
                 <div class="modal-content rounded-0 border-0">
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">"Anne Lukins", <cite>Intersections</cite>, 2019
