--- a/writing.html
+++ b/writing.html
@@ -21,6 +21,12 @@
                 max-width: 1200px;
             }
         }
+
+        @media screen and (min-width: 1200px) {
+            .modal-xl {
+                width: 850px;
+            }
+        }
     </style>
 
     <title>Writing</title>
@@ -56,44 +62,82 @@
                     <h1>Writing</h1>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <img src="assets/images/Kristina_Centore_Anne_Lukins-1.png" class="img-fluid border mb-2 mt-3"
-                        alt="">
-                    <p>"Warith Taha," in <cite>Intersections</cite>, the Tyler School of Art and Architecture MFA
-                        Catalogue (Philadelphia: Temple University, 2020).</p>
+                    <a href="#taha-modal" data-toggle="modal"><img src="assets/images/Kristina_Centore_Warith_Taha-1.png" class="img-fluid border mb-2 mt-3" alt="Page 1 'Warith Taha'"></a>
+                    <p>"Warith Taha," in <cite>Intersections</cite>, the Tyler School of Art and Architecture MFA Catalogue (Philadelphia: Temple University, 2020).</p>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <a href="#lukins-modal" data-toggle="modal"><img
-                            src="assets/images/Kristina_Centore_Anne_Lukins-1.png" class="img-fluid border mb-2 mt-3"
-                            alt=""></a>
-                    <p>"Anne Lukins," in <cite>Intersections</cite>, the Tyler School of Art and Architecture MFA
-                        Catalogue (Philadelphia: Temple University, 2019).</p>
+                            src="assets/images/Kristina_Centore_Anne_Lukins-1.png" class="img-fluid border mb-2 mt-3" alt="Page 1 of 'Anne Lukins'"></a>
+                    <p>"Anne Lukins," in <cite>Intersections</cite>, the Tyler School of Art and Architecture MFA Catalogue (Philadelphia: Temple University, 2019).</p>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <img src="assets/images/Kristina_Centore_Anne_Lukins-1.png" class="img-fluid border mb-2 mt-3"
-                        alt="">
-                    <p>"Jino Rahimi," in <cite>Intersections</cite>, the Tyler School of Art and Architecture MFA
-                        Catalogue (Philadelphia: Temple University, 2019).</p>
+                    <a href="#rahimi-modal" data-toggle="modal"><img src="assets/images/Kristina_Centore_Jino_Rahimi-1.png" class="img-fluid border mb-2 mt-3" alt="Page 1 of 'Jino Rahimi'"></a>
+                    <p>"Jino Rahimi," in <cite>Intersections</cite>, the Tyler School of Art and Architecture MFA Catalogue (Philadelphia: Temple University, 2019).</p>
                 </div>
             </div>
         </div>
 
-        <!-- Puppet One Modal -->
-        <div class="modal fade" id="lukins-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        <!-- Warith Taha Modal -->
+        <div class="modal fade" id="taha-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
-            <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-dialog modal-lg modal-xl" role="document">
                 <div class="modal-content rounded-0 border-0">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">"Anne Lukins", <cite>Intersections</cite>, 2019
+                        <h5 class="modal-title" id="tahaLabel">"Warith Taha", <cite>Intersections</cite>, 2020
                         </h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body p-0">
-                        <img src="assets/images/Kristina_Centore_Anne_Lukins-1.png" class="img-fluid" alt="">
-                        <img src="assets/images/Kristina_Centore_Anne_Lukins-2.png" class="img-fluid" alt="">
-                        <img src="assets/images/Kristina_Centore_Anne_Lukins-3.png" class="img-fluid" alt="">
-                        <img src="assets/images/Kristina_Centore_Anne_Lukins-4.png" class="img-fluid" alt="">
+                        <img src="assets/images/Kristina_Centore_Warith_Taha-1.png" class="img-fluid" alt="Page 1 of 'Warith Taha'">
+                        <img src="assets/images/Kristina_Centore_Warith_Taha-2.png" class="img-fluid" alt="Page 2 of 'Warith Taha'">
+                        <img src="assets/images/Kristina_Centore_Warith_Taha-3.png" class="img-fluid" alt="Page 3 of 'Warith Taha'">
+                        <img src="assets/images/Kristina_Centore_Warith_Taha-4.png" class="img-fluid" alt="Page 4 of 'Warith Taha'">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Anne Lukins Modal -->
+        <div class="modal fade" id="lukins-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-xl" role="document">
+                <div class="modal-content rounded-0 border-0">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="lukinsLabel">"Anne Lukins", <cite>Intersections</cite>, 2019
+                        </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body p-0">
+                        <img src="assets/images/Kristina_Centore_Anne_Lukins-1.png" class="img-fluid" alt="Page 1 of 'Anne Lukins'">
+                        <img src="assets/images/Kristina_Centore_Anne_Lukins-2.png" class="img-fluid" alt="Page 2 of 'Anne Lukins'">
+                        <img src="assets/images/Kristina_Centore_Anne_Lukins-3.png" class="img-fluid" alt="Page 3 of 'Anne Lukins'">
+                        <img src="assets/images/Kristina_Centore_Anne_Lukins-4.png" class="img-fluid" alt="Page 4 of 'Anne Lukins'">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Jino Rahimi Modal -->
+        <div class="modal fade" id="rahimi-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-xl" role="document">
+                <div class="modal-content rounded-0 border-0">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="rahimiLabel">"Jino Rahimi", <cite>Intersections</cite>, 2019
+                        </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body p-0">
+                        <img src="assets/images/Kristina_Centore_Jino_Rahimi-1.png" class="img-fluid" alt="Page 1 of 'Jino Rahimi'">
+                        <img src="assets/images/Kristina_Centore_Jino_Rahimi-2.png" class="img-fluid" alt="Page 2 of 'Jino Rahimi'">
+                        <img src="assets/images/Kristina_Centore_Jino_Rahimi-3.png" class="img-fluid" alt="Page 3 of 'Jino Rahimi'">
+                        <img src="assets/images/Kristina_Centore_Jino_Rahimi-4.png" class="img-fluid" alt="Page 4 of 'Jino Rahimi'">
                     </div>
                 </div>
             </div>
