--- a/writing.html
+++ b/writing.html
@@ -62,6 +62,18 @@
                     <h1>Writing</h1>
                 </div>
                 <div class="col-md-6 col-lg-4">
+                    <a href="http://www.bu.edu/sequitur/" target="_blank"><img src="assets/images/sequitur.jpg" class="img-fluid border mb-2 mt-3" alt="Sequitur logo"></a>
+                    <p>“Future Tense: Hamed Owais and the Aswan High Dam,” in <cite>SEQUITUR</cite> 6, no. 2 (forthcoming).</p>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <a href="#crosby-modal" data-toggle="modal"><img src="assets/images/Kristina_Centore_Jazmyn_Crosby-1.png" class="img-fluid border mb-2 mt-3" alt="Page 1 'Jazmyn Crosby'"></a>
+                    <p>"Jazmyn Crosby," in <cite>Intersections</cite>, the Tyler School of Art and Architecture MFA Catalogue (Philadelphia: Temple University, 2020).</p>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <a href="#hocharoen-modal" data-toggle="modal"><img src="assets/images/Kristina_Centore_Serena_Hocharoen-1.png" class="img-fluid border mb-2 mt-3" alt="Page 1 'Serena Hocharoen'"></a>
+                    <p>"Serena Hocharoen," in <cite>Intersections</cite>, the Tyler School of Art  and Architecture MFA Catalogue (Philadelphia: Temple University, 2020).</p>
+                </div>
+                <div class="col-md-6 col-lg-4">
                     <a href="#taha-modal" data-toggle="modal"><img src="assets/images/Kristina_Centore_Warith_Taha-1.png" class="img-fluid border mb-2 mt-3" alt="Page 1 'Warith Taha'"></a>
                     <p>"Warith Taha," in <cite>Intersections</cite>, the Tyler School of Art and Architecture MFA Catalogue (Philadelphia: Temple University, 2020).</p>
                 </div>
@@ -73,6 +85,48 @@
                 <div class="col-md-6 col-lg-4">
                     <a href="#rahimi-modal" data-toggle="modal"><img src="assets/images/Kristina_Centore_Jino_Rahimi-1.png" class="img-fluid border mb-2 mt-3" alt="Page 1 of 'Jino Rahimi'"></a>
                     <p>"Jino Rahimi," in <cite>Intersections</cite>, the Tyler School of Art and Architecture MFA Catalogue (Philadelphia: Temple University, 2019).</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Jazmyn Crosby Modal -->
+        <div class="modal fade" id="crosby-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-xl" role="document">
+                <div class="modal-content rounded-0 border-0">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="crosbyLabel">"Jazmyn Crosby", <cite>Intersections</cite>, 2020</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body p-0">
+                        <img src="assets/images/Kristina_Centore_Jazmyn_Crosby-1.png" class="img-fluid" alt="Page 1 of 'Jazmyn Crosby'">
+                        <img src="assets/images/Kristina_Centore_Jazmyn_Crosby-2.png" class="img-fluid" alt="Page 2 of 'Jazmyn Crosby'">
+                        <img src="assets/images/Kristina_Centore_Jazmyn_Crosby-3.png" class="img-fluid" alt="Page 3 of 'Jazmyn Crosby'">
+                        <img src="assets/images/Kristina_Centore_Jazmyn_Crosby-4.png" class="img-fluid" alt="Page 4 of 'Jazmyn Crosby'">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Serena Hocharoen Modal -->
+        <div class="modal fade" id="hocharoen-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-lg modal-xl" role="document">
+                <div class="modal-content rounded-0 border-0">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="hocharoenLabel">"Serena Hocharoen", <cite>Intersections</cite>, 2020</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body p-0">
+                        <img src="assets/images/Kristina_Centore_Serena_Hocharoen-1.png" class="img-fluid" alt="Page 1 of 'Serena Hocharoen'">
+                        <img src="assets/images/Kristina_Centore_Serena_Hocharoen-2.png" class="img-fluid" alt="Page 2 of 'Serena Hocharoen'">
+                        <img src="assets/images/Kristina_Centore_Serena_Hocharoen-3.png" class="img-fluid" alt="Page 3 of 'Serena Hocharoen'">
+                        <img src="assets/images/Kristina_Centore_Serena_Hocharoen-4.png" class="img-fluid" alt="Page 4 of 'Serena Hocharoen'">
+                    </div>
                 </div>
             </div>
         </div>
