started curatorial.html and updated main paragraph of animation.html

--- a/animation.html
+++ b/animation.html
@@ -98,6 +98,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="writing.html">Writing</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="curatorial.html">Curatorial</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -107,12 +110,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h1>Animation</h1>
-                    <p>Between 2008-2016, Centore maintained an art practice that consisted mainly of the production of
-                        stop-motion animated shorts. Many of the satirical works that resulted are efforts to produce
-                        critical commentary on disparity and power by refocusing the visual language of Saturday morning
-                        cartoons. Through the incorporation of found materials and the use of claymation techniques that
-                        hearken back to classic animations, the works play with scale to posit new ways of experiencing
-                        everyday surroundings.</p>
+                    <p>Between 2008-2016, Centore maintained an art practice that consisted mainly of the production of stop-motion animated shorts. Harkening back to classic stop-motion techniques and taking inspiration from the work of Czech puppet animator Ji&rcaron;&iacute; Trnka, many of the satirical works that resulted are efforts to interrogate disparity and power by refocusing the visual language of Saturday morning cartoons. Through the use of claymation and the incorporation of found materials, the works play with scale and posit new ways of experiencing and thinking critically about everyday surroundings.</p>
                     <h3>Selected Animation Stills</h3>
                 </div>
 
