--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="writing.html">Writing</a>
-          </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="curatorial.html">Curatorial</a>
+            </li>
         </ul>
       </div>
     </nav>
