updated index photo and bio

--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
           <div class="col-md-8">
             <p>Kristina Centore is a recent graduate of the MA program in Art History at the Tyler School of Art and Architecture at Temple University and is based in Philadelphia, PA. Her current research interests include the history of photography and the relationship of visual culture to art production between the United States and the Soviet Union during the interwar years, as well as global modernisms during the Cold War era.</p>
             <p>Prior to attending Tyler, Centore received her BA in Visual Art from Rutgers University in New Brunswick, NJ, where she was an active member of the city’s thriving DIY art and music community. Relocating to Philadelphia shortly thereafter, Centore became a member of Space 1026, an art collective and gallery space, where she maintained a studio practice and curated exhibitions.</p>
-            <p>With nearly a decade of experience working in the museum field, Centore has also managed complex logistics for major exhibitions, led group tours in contemporary art galleries, and worked hands-on in film and media archives.</p>
             <p>Centore is always open to collaboration on projects involving research, art writing, archival work, and exhibition planning.</p>
             <p>For more information, please contact kristinacentore@gmail.com.</p>
           </div>
           <div class="col-md-4">
-            <img src="assets/images/kristinapic001.jpg" class="img-fluid kristina" alt="Picture of Kristina Centore">
+            <img src="assets/images/kristina_centore_02.JPG" class="img-fluid kristina" alt="Picture of Kristina Centore">
           </div>
         </div>
       </div>
