updated breakpoints and related for img on index

--- a/index.html
+++ b/index.html
@@ -1,90 +1,123 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <!-- JD CSS -->
-    <style>
-      /* screen width from 340 to 767 (bootstrap md) */
-      @media screen and (min-width:340px) and (max-width:767px) {
+  <!-- JD CSS -->
+  <style>
+    /* screen width from 340 to 767 (bootstrap md) */
+    @media screen and (max-width:359px) {
 
-        .kristina {
-          width: 75%;
-          display: block;
-          margin-left: auto;
-          margin-right: auto;
+      .kristina {
+        width: 63%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
 
-        }
       }
-    </style>
+    }
 
-    <title>Kristina Centore</title>
-  </head>
+    /* screen width from 340 to 767 (bootstrap md) */
+    @media screen and (min-width:360px) and (max-width:469px) {
 
-  <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Kristina Centore</a>
+      .kristina {
+        width: 55%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      }
+    }
+
+    /* screen width from 340 to 767 (bootstrap md) */
+    @media screen and (min-width:470px) and (max-width:767px) {
+
+      .kristina {
+        width: 47%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+
+      }
+    }
+  </style>
+
+  <title>Kristina Centore</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">Kristina Centore</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="animation.html">Animation</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="writing.html">Writing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="curatorial.html">Curatorial</a>
-            </li>
-        </ul>
-      </div>
-    </nav>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="animation.html">Animation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="writing.html">Writing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="curatorial.html">Curatorial</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-    <main>
-      <div class="container py-2">
-        <div class="row">
-          <div class="col-md-12">
-            <h1>About</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8">
-            <p>Kristina Centore is a recent graduate of the MA program in Art History at the Tyler School of Art and Architecture at Temple University and is based in Philadelphia, PA. Her current research interests include the history of photography and the relationship of visual culture to art production between the United States and the Soviet Union during the interwar years, as well as global modernisms during the Cold War era.</p>
-            <p>Prior to attending Tyler, Centore received her BA in Visual Art from Rutgers University in New Brunswick, NJ, where she was an active member of the city’s thriving DIY art and music community. Relocating to Philadelphia shortly thereafter, Centore became a member of Space 1026, an art collective and gallery space, where she maintained a studio practice and curated exhibitions.</p>
-            <p>Centore is always open to collaboration on projects involving research, art writing, archival work, and exhibition planning.</p>
-            <p>For more information, please contact kristinacentore@gmail.com.</p>
-          </div>
-          <div class="col-md-4">
-            <img src="assets/images/kristina_centore_02.JPG" class="img-fluid kristina" alt="Picture of Kristina Centore">
-          </div>
+  <main>
+    <div class="container py-2">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>About</h1>
         </div>
       </div>
-    </main>
+      <div class="row">
+        <div class="col-md-8 col-lg-9">
+          <p>Kristina Centore is a recent graduate of the MA program in Art History at the Tyler School of Art and
+            Architecture at Temple University and is based in Philadelphia, PA. Her current research interests include
+            the history of photography and the relationship of visual culture to art production between the United
+            States and the Soviet Union during the interwar years, as well as global modernisms during the Cold War era.
+          </p>
+          <p>Prior to attending Tyler, Centore received her BA in Visual Art from Rutgers University in New Brunswick,
+            NJ, where she was an active member of the city’s thriving DIY art and music community. Relocating to
+            Philadelphia shortly thereafter, Centore became a member of Space 1026, an art collective and gallery space,
+            where she maintained a studio practice and curated exhibitions.</p>
+          <p>Centore is always open to collaboration on projects involving research, art writing, archival work, and
+            exhibition planning.</p>
+          <p>For more information, please contact kristinacentore@gmail.com.</p>
+        </div>
+        <div class="col-md-4 col-lg-3">
+          <img src="assets/images/kristina_centore_02.JPG" class="img-fluid kristina" alt="Picture of Kristina Centore">
+        </div>
+      </div>
+    </div>
+  </main>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"></script>
-  </body>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+</body>
 
 </html>
