curatorial now has modal, updated navbar

--- a/animation.html
+++ b/animation.html
@@ -85,7 +85,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Kristina Centore</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -97,15 +97,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="animation.html">Animation<span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="curatorial.html">Curatorial Projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="writing.html">Writing</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="curatorial.html">Curatorial</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="animation.html">Animation<span class="sr-only">(current)</span></a>
                 </li>
+                
             </ul>
         </div>
     </nav>
