--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
     <a class="navbar-brand" href="index.html">Kristina Centore</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -71,14 +71,15 @@
           <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="animation.html">Animation</a>
+          <a class="nav-link" href="curatorial.html">Curatorial Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="writing.html">Writing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="curatorial.html">Curatorial</a>
+          <a class="nav-link" href="animation.html">Animation</a>
         </li>
+
       </ul>
     </div>
   </nav>
