--- a/writing.html
+++ b/writing.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Kristina Centore</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -51,14 +51,15 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="animation.html">Animation</a>
+                    <a class="nav-link" href="curatorial.html">Curatorial Projects</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="writing.html">Writing<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="curatorial.html">Curatorial</a>
+                    <a class="nav-link" href="animation.html">Animation</a>
                 </li>
+                
             </ul>
         </div>
     </nav>
