--- a/curatorial.html
+++ b/curatorial.html
@@ -38,7 +38,6 @@
                 pointer-events: none;
             }
 
-
         }
 
         /* screen width from 401 to 475 */
@@ -57,6 +56,19 @@
                 pointer-events: none;
             }
 
+        }
+
+        @media (min-width: 576px) {
+            .modal-dialog {
+                margin: 1rem auto;
+            }
+        }
+
+        @media (min-width: 992px) {
+            /* width of modal for paternoster */
+            .modal-sp {
+                max-width: 700px;
+            }
         }
     </style>
 
@@ -97,7 +109,7 @@
                     <h1>Curatorial Projects</h1>
                 </div>
                 <div class="col-md-12">
-                    <p class="mb-2 lead">Layqa Nuna Yawar, <cite>Forever/Siempre</cite>, Space 1026, Philadelphia, PA
+                    <p class="mb-0 lead">Layqa Nuna Yawar, <cite>Forever/Siempre</cite>, Space 1026, Philadelphia, PA
                         (November 2-23, 2018)</p>
                 </div>
             </div>
@@ -106,13 +118,15 @@
 
             </div>
             <hr>
-            <!-- <div class="row">
+            <div class="row">
                 <div class="col-md-12 mt-2">
-                    <p class="mb-2 lead">Marissa Paternoster, <cite>The Artist Need Not Suffer</cite>, Space 1026,
+                    <p class="mb-0 lead">Marissa Paternoster, <cite>The Artist Need Not Suffer</cite>, Space 1026,
                         Philadelphia, PA (January 6-27, 2017)</p>
                 </div>
+            </div>
+            <div class="row" id="paternoster">
 
-            </div> -->
+            </div>
         </div>
 
 
@@ -151,7 +165,7 @@
                             <li data-target="#layqaIndicators" data-slide-to="13"></li>
                             <li data-target="#layqaIndicators" data-slide-to="14"></li>
                         </ol>
-                        <div class="carousel-inner" id="modal-carousel-imgs">
+                        <div class="carousel-inner" id="modal-carousel-layqa">
                             
                         </div>
                         <a class="carousel-control-prev" href="#layqaIndicators" role="button" data-slide="prev">
@@ -159,6 +173,53 @@
                             <span class="sr-only">Previous</span>
                         </a>
                         <a class="carousel-control-next" href="#layqaIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Paternoster Modal -->
+    <div class="modal fade" id="paternoster-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+        aria-hidden="true">
+        <div class="modal-dialog modal-sp" role="document">
+            <div class="modal-content rounded-0 border-0">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel2">Marissa Paternoster, <cite>The Artist Need Not Suffer</cite></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body p-0">
+                    <div id="paternosterIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                        <ol class="carousel-indicators">
+                            <li data-target="#paternosterIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="1"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="2"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="3"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="4"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="5"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="6"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="7"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="8"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="9"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="10"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="11"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="12"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="13"></li>
+                            <li data-target="#paternosterIndicators" data-slide-to="14"></li>
+                        </ol>
+                        <div class="carousel-inner" id="modal-carousel-paternoster">
+                            
+                        </div>
+                        <a class="carousel-control-prev" href="#paternosterIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#paternosterIndicators" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
@@ -199,7 +260,7 @@
             "Kristina_Centore_Layqa_Thumb_012.jpg",
             "Kristina_Centore_Layqa_Thumb_013.jpg",
             "Kristina_Centore_Layqa_Thumb_014.jpg",
-            "Kristina_Centore_Layqa_Thumb_015.jpg",
+            "Kristina_Centore_Layqa_Thumb_015.jpg"
         ];
 
         var layqaFullImg = [
@@ -217,7 +278,39 @@
             "Kristina_Centore_Layqa_012.jpg",
             "Kristina_Centore_Layqa_013.jpg",
             "Kristina_Centore_Layqa_014.jpg",
-            "Kristina_Centore_Layqa_015.jpg",
+            "Kristina_Centore_Layqa_015.jpg"
+        ];
+
+        var paternosterImg = [
+            "Kristina_Centore_Paternoster_Thumb_001.jpg",
+            "Kristina_Centore_Paternoster_Thumb_002.jpg",
+            "Kristina_Centore_Paternoster_Thumb_003.jpg",
+            "Kristina_Centore_Paternoster_Thumb_004.jpg",
+            "Kristina_Centore_Paternoster_Thumb_005.jpg",
+            "Kristina_Centore_Paternoster_Thumb_006.jpg",
+            "Kristina_Centore_Paternoster_Thumb_007.jpg",
+            "Kristina_Centore_Paternoster_Thumb_008.jpg",
+            "Kristina_Centore_Paternoster_Thumb_009.jpg",
+            "Kristina_Centore_Paternoster_Thumb_010.jpg",
+            "Kristina_Centore_Paternoster_Thumb_011.jpg",
+            "Kristina_Centore_Paternoster_Thumb_012.jpg",
+            "Kristina_Centore_Paternoster_Thumb_013.jpg"
+        ];
+
+        var paternosterFullImg = [
+            "Kristina_Centore_Paternoster_001.jpg",
+            "Kristina_Centore_Paternoster_002.jpg",
+            "Kristina_Centore_Paternoster_003.jpg",
+            "Kristina_Centore_Paternoster_004.jpg",
+            "Kristina_Centore_Paternoster_005.jpg",
+            "Kristina_Centore_Paternoster_006.jpg",
+            "Kristina_Centore_Paternoster_007.jpg",
+            "Kristina_Centore_Paternoster_008.jpg",
+            "Kristina_Centore_Paternoster_009.jpg",
+            "Kristina_Centore_Paternoster_010.jpg",
+            "Kristina_Centore_Paternoster_011.jpg",
+            "Kristina_Centore_Paternoster_012.jpg",
+            "Kristina_Centore_Paternoster_013.jpg"
         ];
 
 
@@ -235,7 +328,7 @@
 
                 var newFullImg = $("<img>").attr("src", "assets/images/layqa/" + layqaFullImg[i]).addClass("d-block w-100").attr("alt", "Photo from Forever/Siempre");
                 newDiv.append(newFullImg);
-                $("#modal-carousel-imgs").append(newDiv);
+                $("#modal-carousel-layqa").append(newDiv);
 
             } else {
 
@@ -243,7 +336,7 @@
 
                 var newFullImg = $("<img>").attr("src", "assets/images/layqa/" + layqaFullImg[i]).addClass("d-block w-100").attr("alt", "Photo from Forever/Siempre");
                 newDiv.append(newFullImg);
-                $("#modal-carousel-imgs").append(newDiv);
+                $("#modal-carousel-layqa").append(newDiv);
             }
 
             // if (i === 0 || i % 3 === 0) {
@@ -261,6 +354,48 @@
 
         $("a[data-slide-to]").on("click", function () {
             $("#layqaIndicators").carousel($(this).data("slide-to"));
+        });
+
+        for (var i = 0; i < paternosterImg.length; i++) {
+            var newCol = $("<div>").addClass("col-md-4 mt-4");
+            var newLink = $("<a>").attr("href", "#paternoster-modal").attr("data-toggle", "modal").attr("data-slide-to", i);
+            var newImg = $("<img>").attr("src", "assets/images/paternoster/" + paternosterImg[i]).addClass("img-fluid").attr("alt", "Photo from The Artist Need Not Suffer");
+            newLink.append(newImg);
+            newCol.append(newLink);
+            $("#paternoster").append(newCol);
+
+            if (i === 0) {
+
+                var newDiv = $("<div>").addClass("carousel-item active");
+
+                var newFullImg = $("<img>").attr("src", "assets/images/paternoster/" + paternosterFullImg[i]).addClass("d-block w-100").attr("alt", "Photo from The Artist Need Not Suffer");
+                newDiv.append(newFullImg);
+                $("#modal-carousel-paternoster").append(newDiv);
+
+            } else {
+
+                var newDiv = $("<div>").addClass("carousel-item");
+
+                var newFullImg = $("<img>").attr("src", "assets/images/paternoster/" + paternosterFullImg[i]).addClass("d-block w-100").attr("alt", "Photo from The Artist Need Not Suffer");
+                newDiv.append(newFullImg);
+                $("#modal-carousel-paternoster").append(newDiv);
+            }
+
+            // if (i === 0 || i % 3 === 0) {
+            //     var newCol = $("<div>").addClass("col-md-4 mt-4");
+            //     var newImg = $("<img>").attr("src", "assets/images/paternoster/" + paternosterImg[i]).addClass("img-fluid").attr("alt", "Photo from The Artist Need Not Suffer");
+            //     newCol.append(newImg);
+            //     $("#paternoster").append(newCol);
+            // } else {
+            //     var newCol = $("<div>").addClass("col-md-4 mt-4");
+            //     var newImg = $("<img>").addClass("img-fluid").attr("src", "assets/images/paternoster/" + paternosterImg[i]).attr("alt", "Photo from The Artist Need Not Suffer");
+            //     newCol.append(newImg);
+            //     $("#paternoster").append(newCol);
+            // }
+        }
+
+        $("a[data-slide-to]").on("click", function () {
+            $("#paternosterIndicators").carousel($(this).data("slide-to"));
         });
 
     </script>
