organized and moved CSS and JS

--- a/writing.html
+++ b/writing.html
@@ -7,28 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style>
-        a {
-            outline: none !important;
-            box-shadow: none !important;
-        }
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 
-        @media screen and (min-width: 577px) and (max-width: 991px) {
-            .modal-xl {
-                width: 90%;
-                max-width: 1200px;
-            }
-        }
-
-        @media screen and (min-width: 1200px) {
-            .modal-xl {
-                width: 850px;
-            }
-        }
-    </style>
-
+    <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
@@ -117,7 +99,7 @@
         <!-- Jazmyn Crosby Modal -->
         <div class="modal fade" id="crosby-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-xl" role="document">
+            <div class="modal-dialog modal-lg modal-xl writing-modal" role="document">
                 <div class="modal-content rounded-0 border-0">
                     <div class="modal-header">
                         <h5 class="modal-title" id="crosbyLabel">"Jazmyn Crosby", <cite>Intersections</cite>, 2020</h5>
@@ -142,7 +124,7 @@
         <!-- Serena Hocharoen Modal -->
         <div class="modal fade" id="hocharoen-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-xl" role="document">
+            <div class="modal-dialog modal-lg modal-xl writing-modal" role="document">
                 <div class="modal-content rounded-0 border-0">
                     <div class="modal-header">
                         <h5 class="modal-title" id="hocharoenLabel">"Serena Hocharoen", <cite>Intersections</cite>, 2020
@@ -168,7 +150,7 @@
         <!-- Warith Taha Modal -->
         <div class="modal fade" id="taha-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-xl" role="document">
+            <div class="modal-dialog modal-lg modal-xl writing-modal" role="document">
                 <div class="modal-content rounded-0 border-0">
                     <div class="modal-header">
                         <h5 class="modal-title" id="tahaLabel">"Warith Taha", <cite>Intersections</cite>, 2020
@@ -194,7 +176,7 @@
         <!-- Anne Lukins Modal -->
         <div class="modal fade" id="lukins-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-xl" role="document">
+            <div class="modal-dialog modal-lg modal-xl writing-modal" role="document">
                 <div class="modal-content rounded-0 border-0">
                     <div class="modal-header">
                         <h5 class="modal-title" id="lukinsLabel">"Anne Lukins", <cite>Intersections</cite>, 2019
@@ -220,7 +202,7 @@
         <!-- Jino Rahimi Modal -->
         <div class="modal fade" id="rahimi-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-xl" role="document">
+            <div class="modal-dialog modal-lg modal-xl writing-modal" role="document">
                 <div class="modal-content rounded-0 border-0">
                     <div class="modal-header">
                         <h5 class="modal-title" id="rahimiLabel">"Jino Rahimi", <cite>Intersections</cite>, 2019
