--- a/curatorial.html
+++ b/curatorial.html
@@ -7,70 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style>
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicon/site.webmanifest">
-
-    <style>
-        .carousel-control-next,
-        .carousel-control-prev {
-            filter: invert(100%);
-        }
-
-        /* .carousel-control-prev-icon {
-            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
-        }
-
-        .carousel-control-next-icon {
-            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-        } */
-
-        /* screen width from 0 to 400 */
-        @media screen and (max-width:400px) {
-
-            img {
-                pointer-events: none;
-            }
-
-        }
-
-        /* screen width from 401 to 475 */
-        @media screen and (min-width:401px) and (max-width:475px) {
-
-            img {
-                pointer-events: none;
-            }
-
-        }
-
-        /* screen width from 476 to 768 */
-        @media screen and (min-width:476px) and (max-width:768px) {
-
-            img {
-                pointer-events: none;
-            }
-
-        }
-
-        @media (min-width: 576px) {
-            .modal-dialog {
-                margin: 1rem auto;
-            }
-        }
-
-        @media (min-width: 992px) {
-            /* width of modal for paternoster */
-            .modal-sp {
-                max-width: 700px;
-            }
-        }
-    </style>
 
     <title>Curatorial Projects</title>
 </head>
@@ -138,7 +82,7 @@
     <!-- Layqa Modal -->
     <div class="modal fade" id="layqa-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-dialog modal-lg modal-dialog-curatorial" role="document">
             <div class="modal-content rounded-0 border-0">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Layqa Nuna Yawar, <cite>Forever/Siempre</cite></h5>
@@ -168,11 +112,11 @@
                         <div class="carousel-inner" id="modal-carousel-layqa">
                             
                         </div>
-                        <a class="carousel-control-prev" href="#layqaIndicators" role="button" data-slide="prev">
+                        <a class="carousel-control-prev curatorial-carousel" href="#layqaIndicators" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#layqaIndicators" role="button" data-slide="next">
+                        <a class="carousel-control-next curatorial-carousel" href="#layqaIndicators" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
@@ -185,7 +129,7 @@
     <!-- Paternoster Modal -->
     <div class="modal fade" id="paternoster-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
         aria-hidden="true">
-        <div class="modal-dialog modal-sp" role="document">
+        <div class="modal-dialog modal-sp modal-dialog-curatorial" role="document">
             <div class="modal-content rounded-0 border-0">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel2">Marissa Paternoster, <cite>The Artist Need Not Suffer</cite></h5>
@@ -215,11 +159,11 @@
                         <div class="carousel-inner" id="modal-carousel-paternoster">
                             
                         </div>
-                        <a class="carousel-control-prev" href="#paternosterIndicators" role="button" data-slide="prev">
+                        <a class="carousel-control-prev curatorial-carousel" href="#paternosterIndicators" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#paternosterIndicators" role="button" data-slide="next">
+                        <a class="carousel-control-next curatorial-carousel" href="#paternosterIndicators" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
@@ -242,161 +186,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
-    <script>
-
-        var layqaImg = [
-            "Kristina_Centore_Layqa_Thumb_001.jpg",
-            "Kristina_Centore_Layqa_Thumb_002.jpg",
-            "Kristina_Centore_Layqa_Thumb_003.jpg",
-            "Kristina_Centore_Layqa_Thumb_004.jpg",
-            "Kristina_Centore_Layqa_Thumb_005.jpg",
-            "Kristina_Centore_Layqa_Thumb_006.jpg",
-            "Kristina_Centore_Layqa_Thumb_008.jpg",
-            "Kristina_Centore_Layqa_Thumb_009.jpg",
-            "Kristina_Centore_Layqa_Thumb_010.jpg",
-            "Kristina_Centore_Layqa_Thumb_011.jpg",
-            "Kristina_Centore_Layqa_Thumb_012.jpg",
-            "Kristina_Centore_Layqa_Thumb_013.jpg",
-            "Kristina_Centore_Layqa_Thumb_014.jpg",
-            "Kristina_Centore_Layqa_Thumb_015.jpg"
-        ];
-
-        var layqaFullImg = [
-            "Kristina_Centore_Layqa_001.jpg",
-            "Kristina_Centore_Layqa_002.jpg",
-            "Kristina_Centore_Layqa_003.jpg",
-            "Kristina_Centore_Layqa_004.jpg",
-            "Kristina_Centore_Layqa_005.jpg",
-            "Kristina_Centore_Layqa_006.jpg",
-            "Kristina_Centore_Layqa_008.jpg",
-            "Kristina_Centore_Layqa_009.jpg",
-            "Kristina_Centore_Layqa_010.jpg",
-            "Kristina_Centore_Layqa_011.jpg",
-            "Kristina_Centore_Layqa_012.jpg",
-            "Kristina_Centore_Layqa_013.jpg",
-            "Kristina_Centore_Layqa_014.jpg",
-            "Kristina_Centore_Layqa_015.jpg"
-        ];
-
-        var paternosterImg = [
-            "Kristina_Centore_Paternoster_Thumb_001.jpg",
-            "Kristina_Centore_Paternoster_Thumb_002.jpg",
-            "Kristina_Centore_Paternoster_Thumb_003.jpg",
-            "Kristina_Centore_Paternoster_Thumb_004.jpg",
-            "Kristina_Centore_Paternoster_Thumb_005.jpg",
-            "Kristina_Centore_Paternoster_Thumb_006.jpg",
-            "Kristina_Centore_Paternoster_Thumb_007.jpg",
-            "Kristina_Centore_Paternoster_Thumb_008.jpg",
-            "Kristina_Centore_Paternoster_Thumb_009.jpg",
-            "Kristina_Centore_Paternoster_Thumb_010.jpg",
-            "Kristina_Centore_Paternoster_Thumb_011.jpg",
-            "Kristina_Centore_Paternoster_Thumb_012.jpg",
-            "Kristina_Centore_Paternoster_Thumb_013.jpg"
-        ];
-
-        var paternosterFullImg = [
-            "Kristina_Centore_Paternoster_001.jpg",
-            "Kristina_Centore_Paternoster_002.jpg",
-            "Kristina_Centore_Paternoster_003.jpg",
-            "Kristina_Centore_Paternoster_004.jpg",
-            "Kristina_Centore_Paternoster_005.jpg",
-            "Kristina_Centore_Paternoster_006.jpg",
-            "Kristina_Centore_Paternoster_007.jpg",
-            "Kristina_Centore_Paternoster_008.jpg",
-            "Kristina_Centore_Paternoster_009.jpg",
-            "Kristina_Centore_Paternoster_010.jpg",
-            "Kristina_Centore_Paternoster_011.jpg",
-            "Kristina_Centore_Paternoster_012.jpg",
-            "Kristina_Centore_Paternoster_013.jpg"
-        ];
-
-
-        for (var i = 0; i < layqaImg.length; i++) {
-            var newCol = $("<div>").addClass("col-md-4 mt-4");
-            var newLink = $("<a>").attr("href", "#layqa-modal").attr("data-toggle", "modal").attr("data-slide-to", i);
-            var newImg = $("<img>").attr("src", "assets/images/layqa/" + layqaImg[i]).addClass("img-fluid").attr("alt", "Photo from Forever/Siempre");
-            newLink.append(newImg);
-            newCol.append(newLink);
-            $("#layqa").append(newCol);
-
-            if (i === 0) {
-
-                var newDiv = $("<div>").addClass("carousel-item active");
-
-                var newFullImg = $("<img>").attr("src", "assets/images/layqa/" + layqaFullImg[i]).addClass("d-block w-100").attr("alt", "Photo from Forever/Siempre");
-                newDiv.append(newFullImg);
-                $("#modal-carousel-layqa").append(newDiv);
-
-            } else {
-
-                var newDiv = $("<div>").addClass("carousel-item");
-
-                var newFullImg = $("<img>").attr("src", "assets/images/layqa/" + layqaFullImg[i]).addClass("d-block w-100").attr("alt", "Photo from Forever/Siempre");
-                newDiv.append(newFullImg);
-                $("#modal-carousel-layqa").append(newDiv);
-            }
-
-            // if (i === 0 || i % 3 === 0) {
-            //     var newCol = $("<div>").addClass("col-md-4 mt-4");
-            //     var newImg = $("<img>").attr("src", "assets/images/layqa/" + layqaImg[i]).addClass("img-fluid").attr("alt", "Photo from Forever/Siempre");
-            //     newCol.append(newImg);
-            //     $("#layqa").append(newCol);
-            // } else {
-            //     var newCol = $("<div>").addClass("col-md-4 mt-4");
-            //     var newImg = $("<img>").addClass("img-fluid").attr("src", "assets/images/layqa/" + layqaImg[i]).attr("alt", "Photo from Forever/Siempre");
-            //     newCol.append(newImg);
-            //     $("#layqa").append(newCol);
-            // }
-        }
-
-        $("a[data-slide-to]").on("click", function () {
-            $("#layqaIndicators").carousel($(this).data("slide-to"));
-        });
-
-        for (var i = 0; i < paternosterImg.length; i++) {
-            var newCol = $("<div>").addClass("col-md-4 mt-4");
-            var newLink = $("<a>").attr("href", "#paternoster-modal").attr("data-toggle", "modal").attr("data-slide-to", i);
-            var newImg = $("<img>").attr("src", "assets/images/paternoster/" + paternosterImg[i]).addClass("img-fluid").attr("alt", "Photo from The Artist Need Not Suffer");
-            newLink.append(newImg);
-            newCol.append(newLink);
-            $("#paternoster").append(newCol);
-
-            if (i === 0) {
-
-                var newDiv = $("<div>").addClass("carousel-item active");
-
-                var newFullImg = $("<img>").attr("src", "assets/images/paternoster/" + paternosterFullImg[i]).addClass("d-block w-100").attr("alt", "Photo from The Artist Need Not Suffer");
-                newDiv.append(newFullImg);
-                $("#modal-carousel-paternoster").append(newDiv);
-
-            } else {
-
-                var newDiv = $("<div>").addClass("carousel-item");
-
-                var newFullImg = $("<img>").attr("src", "assets/images/paternoster/" + paternosterFullImg[i]).addClass("d-block w-100").attr("alt", "Photo from The Artist Need Not Suffer");
-                newDiv.append(newFullImg);
-                $("#modal-carousel-paternoster").append(newDiv);
-            }
-
-            // if (i === 0 || i % 3 === 0) {
-            //     var newCol = $("<div>").addClass("col-md-4 mt-4");
-            //     var newImg = $("<img>").attr("src", "assets/images/paternoster/" + paternosterImg[i]).addClass("img-fluid").attr("alt", "Photo from The Artist Need Not Suffer");
-            //     newCol.append(newImg);
-            //     $("#paternoster").append(newCol);
-            // } else {
-            //     var newCol = $("<div>").addClass("col-md-4 mt-4");
-            //     var newImg = $("<img>").addClass("img-fluid").attr("src", "assets/images/paternoster/" + paternosterImg[i]).attr("alt", "Photo from The Artist Need Not Suffer");
-            //     newCol.append(newImg);
-            //     $("#paternoster").append(newCol);
-            // }
-        }
-
-        $("a[data-slide-to]").on("click", function () {
-            $("#paternosterIndicators").carousel($(this).data("slide-to"));
-        });
-
-    </script>
+        <script src="assets/js/curatorial.js"></script>
 </body>
 
 </html>
